Backport performance improvements and bug fixes from post-HPPC Mallet
Maintains GNU Trove for binary compatibility with serialized models.

Bug fixes:
- ParallelTopicModel: totalTokens int->long to prevent overflow on large corpora
- ParallelTopicModel: use topicSequence.size() instead of currentDocTopics.length
  in printDenseDocumentTopics/printTopDocuments (array may be over-allocated)
- CRFTrainerByLabelLikelihood: fix training proportion logging (was showing
  fraction, now shows percent); add braces for clarity
- StatFunctions: add gammaPDF, gammaCDF, gammaInverseCDF (used by DownsampleLabelWords)
- Maths: add regularizedGammaP for Gamma CDF computation

Performance improvements:
- Alphabet: remove ReadWriteLock synchronization (unnecessary for typical
  single-threaded import + read-only training pattern; simplifies code
  and improves read performance)
- WorkerRunnable: hoist per-document working arrays (localTopicCounts,
  localTopicIndex, topicTermScores) to instance fields, eliminating
  per-document allocation and reducing GC pressure

Java compatibility:
- TokenSequence: comment out removeLast() which conflicts with Java 21 API
- Replace deprecated new Integer()/new Double() etc. with Integer.valueOf()
  across 30+ files (Java 9+ deprecation warnings)
- pom.xml: raise compiler source/target from 1.6 to 8

New features:
- WorkerCallable: add Callable-based parallel topic model worker (alternative
  to WorkerRunnable, better thread pool integration)
- WorkerRunnable: mark @Deprecated in favor of WorkerCallable
- DownsampleLabelWords: backport authorless topic model transform
- StateToInstances: backport utility to restore instance lists from
  topic model state files

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>